1.3.1 - 2017-08-02
    * Implemented hashCode() and equals() in Json objects.

1.3.0 - 2017-05-07
    * Full test coverage.
    * Fixed LookaheadReader.skip(int) and LookaheadReader.read(char[],int,int)
      not working according to the java.io.Reader specification.
    * API changes:
        * Removed LookaheadReader.consume(int) - use skip(int) instead.
        * JsonArray now implements Iterable<JsonValue>.
        * JsonObject now implements Iterable<JsonMember>.
        * Removed JsonArray.addElement(JsonValue).
        * Replaced JsonArray.setElement(JsonValue,int) by set(int,JsonValue).
        * Removed JsonArray.getElements().
        * Removed JsonArray.getElementList().
        * Added JsonArray.remove(int).
        * Added JsonArray.addAll(JsonValue...).
        * Added JsonArray(int) - initial capacity constructor.
        * Renamed JsonArray.getNumElement() to size.
        * Renamed JsonObject.addMember() to add.
        * Renamed JsonObject.getMember(int) to get.
        * Removed JsonObject.hasMember(String).
        * Removed JsonObject.getMembers().
        * Removed JsonObject.getMemberList().
        * Replaced JsonObject.setMember(JsonMember,int) by set(int,JsonMember).
        * Renamed JsonObject.getNumMember() to size.
        * Added JsonObject.remove(int).
        * Added JsonObject.remove(String).
        * Added JsonObject.addAll(JsonMember...).
        * Added JsonObject(int) - initial capacity constructor.
        * Added JsonValue.copy().
        * Added Json.of(X) methods to convert primitive types and String to the
          wrapped JSON equivalents.
        * Added asInt(int), asLong(long), asFloat(float), asDouble(double),
          asString(String), and asBoolean(boolean) to JsonValue.
        * Added JsonValue.asArray() and JsonValue.asObject() as aliases of
          JsonValue.array() and JsonValue.object().
        * JsonObject.add(String, JsonValue) now throws a NullPointerException when
          the value is null.