@@ -14,6 +14,7 @@
 # IntelliJ
 /.idea/
 /*.iml
+/out/
 
 # Eclipse
 /.settings/
