@@ -1,9 +1,12 @@
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'signing'
-apply plugin: 'jacoco'
+plugins {
+  id 'java'
+  id 'maven'
+  id 'signing'
+  id 'groovy'
+  id 'jacoco'
+}
 
-project.version = '1.3.1'
+project.version = '1.3.2'
 project.group = 'se.llbit'
 project.archivesBaseName = 'jo-json'
 
@@ -16,6 +19,7 @@ repositories {
 
 dependencies {
   testCompile 'junit:junit:4.11'
+  testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
 }
 
 test.inputs.dir file('testfiles')
@@ -87,4 +91,3 @@ if (project.hasProperty('ossrhUsername')) {
     }
   }
 }
-
